src/styles/components/svg-viewer-v2.styl
@keyframes loading-pulse {
  from {
    fill: $primary;
  }
  to {
    fill: $secondary;
  }
}

.svg-viewer-v2
  background: $tertiary
  display: block
  margin: 0 auto
  border: 1px solid white
  flex: 1 1 auto
  width: 100%
  
  &:focus
    border: 1px solid red
    
  &.show-aggregations-none
    .aggregated-text    
      display: none
    
  &.show-aggregations-overlay
    .aggregated-text    
      .circle
        fill: rgba(153, 51, 153, 0.2)
      .path
        fill: rgba(255, 255, 255, 0.3)
      .text
        fill: rgba(0, 0, 0, 0)
    .aggregated-text:hover
      .circle 
      .path
        fill: rgba(255, 255, 255, 1)
      .text
        fill: rgba(0, 0, 0, 1)
  
  &.show-aggregations-full
    .aggregated-text    
      .circle
        fill: rgba(153, 51, 153, 1)
      .path
        fill: rgba(255, 255, 255, 1)
      .text
        fill: rgba(0, 0, 0, 1)
    
.svg-image-v2-loading
  animation-name: loading-pulse
  animation-duration: 1s
  animation-direction: alternate
  animation-iteration-count: infinite

.svg-image-v2-error
  fill: $primary
  stroke: $secondary
  stroke-width: 4

